tests/paczka1/fuzzy1/96599614.err
Error in line 22: qmKc Sd71 30,2
Error in line 1: qmKc S571 71,8
Error in line 7: WmW5 A719 76,3
Error in line 24: WmW5 S571 36,4
Error in line 30: WmW5 S905 18,5
Error in line 32: GXZa2cAd S571 83,0
Error in line 38: WmW5 A719 86,9
